# land-parcel-research-tool

./: .gitignore  CHANGELOG.md  README.md  VIEWER_ARCHITECTURE.md  beacon_survey_results.json  package-lock.json  package.json  test_hamilton_parcels.txt
apps/api/: .dockerignore  .gitignore  CLEANUP_SUMMARY.md  DEPENDENCIES.md  Dockerfile  ENTRA_ID_GUIDE.md  QUICK_START.md  README.md  README_SIMPLIFIED.md  TESTING.md  TEST_COMMANDS.md  env.example  inspect_beacon_html.py  main.py  pyproject.toml  scheduler.py  survey_beacon_versions.py  test_azure_parcels.py  test_beacon_debug.py  test_beacon_elements.py  test_beacon_hendricks.py  test_beacon_scraper.py  test_imports.py  test_shapefile_contents.py  worker.py
apps/api/_source_delete_soon/: 1. Scrape Parcels (ThinkGIS) README.md  1. Scrape Parcels (ThinkGIS).py  2. Export Labels.py
apps/api/_source_delete_soon/Beacon Scraper/: Book1.xlsx  CLAUDE.md  README.md  main.py  (+10 more)
apps/api/auth/: entra_id.py
apps/api/config/: main.py  settings.py
apps/api/docs/: API_IMPROVEMENTS.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  PRE_SUPPLIED_SHAPEFILES.md  USER_TRACKING.md
apps/api/hwc_land_parcel_automater_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/models/: Job.py  ParcelJob.py
apps/api/routes/: jobs.py
apps/api/scrapers/: base_scraper.py  beacon_scraper.py  hamilton_scraper.py  platform_factory.py  thinkgis_scraper.py  thinkgis_scraper_subprocess.py  wthgis_scraper.py  wthgis_scraper_subprocess.py
apps/api/storage/: az.py  db.py
apps/api/utils/: file_parser.py  label_exporter.py  main.py
(+58 files in other folders)
